2007-02-18  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (consume): Allocate buff dynamically,
	rather than on the stack.

2007-02-18  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (consume): Documented function.

2007-02-18  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (consume): Use tc to report consumed bytes 
	in all cases.

2007-02-18  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (extract_jar): Use consume instead of pb_read
	to consume unneeded bytes.

2007-02-18  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (consume): Changed to return void.
	Removed unused return statement.

2007-02-18  Dalibor Topic  <robilad@kaffe.org>

	* compress.c (inflate_file): Removed code handling
	negative return value from pb_read, since it is always
	non-negative.

2007-02-18  Dalibor Topic  <robilad@kaffe.org>

	* pushback.h (pb_read): Added documentation.
	* pushback.c: Added myself to authors.

2007-02-15  Dalibor Topic  <robilad@kaffe.org>

	* pushback.c (pb_read): Exit if read fails.

2007-02-15  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (consume): Exit if lseek fails.

2007-02-15  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (consume): Changed amt and tc to size_t.

2007-02-15  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (list_jar): Changed rdamt to size_t.
	(expand_options) Changed new_argc, args_to_expand to size_t.
	Added corresponding cast.

2007-02-15  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (add_array_to_jar): Exit if write fails.

2007-02-15  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (get_next_arg): Changed len and pos to size_t.

2007-02-15  Dalibor Topic  <robilad@kaffe.org>

	* Makefile.am (SPLINT_FLAGS): Include headers in lib directory.
	* Makefile.in: Regenerated.

2007-02-15  Dalibor Topic  <robilad@kaffe.org>

	* jargrep.c (main): Use strdup instead of strcpy.
	* jartool.c (make_manifest, add_to_jar, add_file_to_jar,
	add_array_to_jar): Use strdup and strncpy instead of strcpy.
