@@ -1,5 +1,10 @@
 2007-02-18  Dalibor Topic  <robilad@kaffe.org>
 
+	* jartool.c (list_jar): Introduced local variable 
+	central_header_offset.
+
+2007-02-18  Dalibor Topic  <robilad@kaffe.org>
+
 	* jartool.c (consume): Allocate buff dynamically,
 	rather than on the stack.
 
